--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
     </div>
 
     <button class="btn">Следующий день</button>
-    <button class="btn">Мой портфель</button>
-    <button class="btn">Новости</button>
-    <button class="btn">Банк</button>
+    <button class="btn"><a href='/portfolio/index.html'>Мой портфель</a></button>
+    <button class="btn"><a href='/news/index.html'>Новости</a></button>
+    <button class="btn"><a href='/bank/index.html'>Банк</a></button>
 
     <div class="news-ticker">
       <p>Центробанк снизил ключевую ставку • Акции КвантТех взлетели на фоне нового открытия • НефтьРус сообщает о рекордной прибыли • Индекс РТС растет третий день подряд • ТехноГигант анонсировал новую линейку продуктов</p>
