--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://websim.ai/c/financialexchange.ru"><title>financialexchange.ru</title>
+<html><head><title>financialexchange.ru</title>
 <style>
   body {
     font-family: Arial, sans-serif;
